# django-authorization

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  README_zh.md  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  release.yml
dauthz/: apps.py  core.py  settings.py  utils.py
dauthz/backends/: __init__.py  casbin_backend.py
dauthz/decorators/: __init__.py  _enforcer_decorator.py  _request_decorator.py  enforcer_middleware.py  request_middleware.py
dauthz/management/commands/: group.py  policy.py  role.py  utils.py
dauthz/middlewares/: __init__.py  enforcer.py  enforcer_middleware.py  request.py  request_middleware.py
django_authorization/: __init__.py  casbin_backend.py  middleware.py
tests/: settings.py  test.py  test_adapter.py  test_backend.py  test_basic.py  test_command.py  test_decorator.py  test_middleware.py  utils.py
